--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "bb4L",
   "license": "ISC",
   "dependencies": {
-    "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
+    "discord.js": "^11.5.1",
     "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "winston": "^3.2.1",
